app/sass/styles.scss
@import "bourbon";
@import "neat";

@font-face {
  font-family: "quest";
  src: url("fonts/Last King Quest.ttf") format("truetype");
}

@font-face {
  font-family: "typography times";
  src: url("fonts/Typography Times Regular.ttf") format("truetype");
}

@font-face {
  font-family: "typography times";
  src: url("fonts/Typography Times Bold.ttf") format("truetype");
  font-weight: bold;
}

@font-face {
  font-family: "typography times";
  src: url("fonts/Typography Times Italic.ttf") format("truetype");
  font-style: italic;
}

@font-face {
  font-family: "typography times";
  src: url("fonts/Typography Times Bold Italic.ttf") format("truetype");
  font-weight: bold;
  font-style: italic;
}

html {
	background-image: url('compass.png'), url('background.png');
	background-repeat: no-repeat, repeat;
	background-position: left bottom, top left;
	background-size: 40em, 40em;
	font-family: 'typography times', times;
}

html {
	height: 100%;
}

body {
	min-height: 100%;
}

.content-container {
	font-weight: bold;
	min-height: 50vh;
	width: 50%;
	margin: 3em auto;
	background-color: rgba(0, 0, 0, .1);
	padding: 1em;
}

header {
	text-align: center;
	padding: .5em 0;
	font-size: 3em;
	border-bottom: solid 1px;
	font-family: 'quest', cursive;
	-webkit-box-shadow: 0 5px 20px 0 #000000;
	box-shadow: 0 5px 20px 0 #000000;
}

h2, p {
	text-align: left;
}

.button {
	display: inline-block;
	font-weight: normal;
	text-decoration: none;	
	background-image: url('flag.png');
	background-size: 100% 100%;
	margin: 2em;
	padding: 1em 3em 1em 2em;
	&:visited, &:active, &:link {
		color: #ffff8e;
	}
	&:hover {
		color: #ff8e8e;
	}
}

#countriesTable {
    border-collapse: collapse;
    border: 1px solid black;
    height: 35em;
    overflow-y: scroll;
    display: block;

    th {
    	color: rgba(255, 255, 255, .9);
    	background-color: rgba(0, 0, 0, .5);
    }

    th, td {
    	padding: 3px;
    	width: 6 / 100 * 100%;
    	border: 1px solid black;
    }

    td {
    	text-align: left;
    }

    tbody tr:nth-child(odd) {
    	background-color: rgba(255, 255, 255, .7);
    }

    tbody tr:nth-child(even) {
    	background-color: rgba(255, 255, 255, .4);
    }

    tbody tr:hover {
    	background-color: rgba(102, 204, 255, .7);
    }
}

section {
  @include outer-container;

  .country {
    font-family: 'quest', cursive;
    font-size: 2em;
    margin-left: 2em;
    margin-bottom: 0;
    text-align: left;
  }
  
  .category { 
    @include span-columns(6);
    p {
      text-align: right;
      word-wrap: normal;
    }
  }
  .data { 
    @include span-columns(5.5); 
    a {
      margin-right: .5em;
    }
  }
  
  .flag {
    @include shift(2);
  }

  .flag, .map {
    @include span-columns(4);
  }
}

